fix: remove letter spacing

--- a/src/stylus/core/typography.styl
+++ b/src/stylus/core/typography.styl
@@ -13,7 +13,6 @@ for $header, $n in $headers
 p, body
   font-size: $size-normal
   margin: 0
-  letter-spacing: 0.02em
   line-height: 1.3
 
 h4, .h4, h5, .h5, h6, .h6
